--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "cf-workers-telegram-bot-v2"
+name = "telegrambot"
 main = "packages/worker/src/worker.ts"
 
 workers_dev = true
@@ -13,7 +13,7 @@ binding = "AI"
 [[d1_databases]]
 binding = "DB"
 database_name = "llama2"
-database_id = "e24eb37b-6b13-4e84-b1af-63de0dedcc6d"
+database_id = "54481e19-cdcf-4b8b-bd96-010df1eae744"
 
 [[r2_buckets]]
 binding = "R2"
